--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
     <script src="script.js"></script>
     <script src="save_load.js"></script>
-
+<p>Made by Jack Williamson</p>
 </body>
 </html>
+
